cilium-networkpolicies/immich-networkpolicies/netpol-immich-apollo-connection.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netpol-immich-apollo-egress
  namespace: immich
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: immich
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tailscale
            tailscale.com/parent-resource: expose-apollo-nfs
      toPorts:
        - ports:
            - port: "111"
              protocol: TCP
            - port: "111"
              protocol: UDP
            - port: "2049"
              protocol: TCP
            - port: "2049"
              protocol: UDP

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netpol-immich-apollo-ingress
  namespace: tailscale
spec:
  endpointSelector:
    matchLabels:
      tailscale.com/parent-resource: expose-apollo-nfs
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: immich
      toPorts:
        - ports:
            - port: "111"
              protocol: TCP
            - port: "111"
              protocol: UDP
            - port: "2049"
              protocol: TCP
            - port: "2049"
              protocol: UDP
