cilium-networkpolicies/immich-networkpolicies/netpol-immich-common.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: netpol-immich-common
  namespace: immich
spec:
  endpointSelector:
    matchLabels: {}
  ingress:
    - fromEndpoints:
        - matchLabels: {}
  egress:
    - toEndpoints:
        - matchLabels: {}
    # - toEntities:
    #     - host
    #   toPorts:
    #     - ports:
    #         - port: "6443"
    #           protocol: TCP
    # - toEndpoints:
    #     - matchLabels:
    #         k8s:io.kubernetes.pod.namespace: kube-system
    #         k8s:k8s-app: kube-dns
    #   toPorts:
    #     - ports:
    #         - port: "53"
    #           protocol: UDP
    # - toEntities:
    #     - world
    #   toPorts:
    #     - ports:
    #         - port: "443"
    #           protocol: TCP
