cilium-networkpolicies/immich-networkpolicies/netpol-immich-pg-cnpg-egress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: netpol-immich-pg-cnpg-egress
  namespace: cnpg-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: cnpg
      app.kubernetes.io/name: cloudnative-pg
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: immich
            cnpg.io/instanceName: immich-postgres-1
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
