cilium-networkpolicies/immich-networkpolicies/netpol-immich-pg-to-host.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: netpol-immich-pg-to-host
  namespace: immich
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: immich-postgres
  egress:
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
