cilium-networkpolicies/immich-networkpolicies/netpol-immich-postgresdb-init.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: netpol-immich-postgresdb-init
  namespace: immich
spec:
  endpointSelector:
    matchLabels: 
      cnpg.io/cluster: immich-postgres
      cnpg.io/jobRole: initdb
  egress:
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
