cilium-networkpolicies/immich-networkpolicies/netpol-immich-tailscale-ingress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: netpol-immich-tailscale-ingress
  namespace: immich
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: immich
      app.kubernetes.io/name: server
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: tailscale
            tailscale.com/parent-resource: tailscale-immich
      toPorts:
        - ports:
            - port: "2283"
              protocol: TCP
